Adjustment token baru

--- a/Android Fundamental/GitFriend/app/src/main/res/layout/fragment_home.xml
+++ b/Android Fundamental/GitFriend/app/src/main/res/layout/fragment_home.xml
@@ -223,14 +223,20 @@
 
                 </LinearLayout>
 
-
             </RelativeLayout>
-
-
 
         </androidx.core.widget.NestedScrollView>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmeringLoadingHome"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include layout="@layout/shimmer_home"/>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
